Sat, 04 Feb 2006 19:07:33 +0100 <thp@perli.net> 
	* ** gPodder version 0.5 is here! **
	+ Added "downloaded episodes" tab
	+ Added "liblocaldb" for abstraction of readLocalDB
	* Fixed version to 0.5
	* Small clean-ups
	* Updated TODO-List

Sat, 04 Feb 2006 11:54:55 +0100 <thp@perli.net>
	* Bumped up version number and date in bin/gpodder

Sat, 04 Feb 2006 11:36:08 +0100 <thp@perli.net>
	* Fixed localdb read/write support

Tue, 10 Jan 2006 01:19:44 +0100 <thp@perli.net>
	+ Added first cut of localdb support (liblocdbwriter + liblocdbreader)

Mon, 09 Jan 2006 00:13:10 +0100 <thp@perli.net>
	+ Added gPodder Properties dialog with http/ftp proxy settings
	+ Added very basic config file support to gPodderLib, for proxy

Son Dez 25 10:07:19 CET 2005 <thp@perli.net>
	* Fixed "add channel" dialog "OK" button handling (works again)

Sam Dez 24 15:41:57 CET 2005 <thp@perli.net>
	+ Added "tepache" tool + tepache howto in doc/dev
	+ Added document for development on ubuntu breezy in doc/dev
	* Moved is_downloaded to isDownloaded in libpodcasts

Don Dez  8 20:16:40 CET 2005 <thp@perli.net>
	+ Added "edit channel" dialog
	+ Added "libopmlwriter.py" (a dirty hack to write opml format)
	+ Added "export to OPML" functionality
	* Fixed wget calls (not using /usr/bin/wget, but "wget", using $PATH)
	* Wget detection code on startup with warning when not found
	* Updated AUTHORS list in about dialog
	* Updated TODO list

Mit Nov 23 20:46:33 CET 2005 <thp@perli.net>
	* Improved download status list support
	- Removed download status window (code still in codebase)
	+ Added ability to remove downloads from download status list
	* Prohibit downloading the same podcast twice
	* Port "?" handling and "%20" handling in URLs from gPodder 0.4
	* Cancel all download threads on gPodder exit ("clean shutdown")

Die Nov 22 23:03:39 CET 2005 <thp@perli.net>
	+ Added download status list support

Tue Nov 22 15:12:10 CET 2005 <tosh@cs.tu-berlin.de>
	* Build deb packages