@@ -45,7 +45,7 @@
 
  Debian/Ubuntu users can install the dependencies with:
  
-   apt-get install python python-glade2 python-gtk2 wget
+   apt-get install python python-glade2 python-gtk2 wget python-xml
 
  Other users: Please install the above packages somehow ;)
  If you want to install gPodder from source, you have to 
