@@ -6,8 +6,8 @@
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (Makefile reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.5"
-__date__      = "2006-02-04"
+__version__   = "0.6-svn"
+__date__      = "2006-02-26"
 __copyright__ = "Copyright (c) 2005-2006 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
