@@ -1,3 +1,8 @@
+Sun, 26 Feb 2006 00:11:28 +0100 <thp@perli.net>
+	* Bumped version number and date in bin/gpodder
+	* Updated TODO-List
+	* Strip html inside <description> tags (Reported by Leo Gomez)
+
 Sat, 04 Feb 2006 19:07:33 +0100 <thp@perli.net> 
 	* ** gPodder version 0.5 is here! **
 	+ Added "downloaded episodes" tab
